[package]
name = "binsider"
version = "0.2.1"
description = "Analyze ELF binaries like a boss"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://binsider.dev"
repository = "https://github.com/orhun/binsider"
keywords = ["analyze", "binary", "tui", "elf"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.74.1"
include = [
  "src/**/*",
  "Cargo.*",
  "LICENSE*",
  "README.md",
  "CHANGELOG.md",
]

[features]
default = ["dynamic-analysis"]
dynamic-analysis = ["lurk-cli"]

[dependencies]
ratatui = "0.28.1"
clap = { version = "4.5.53", features = ["derive", "env", "wrap_help", "cargo"] }
thiserror = "2.0.17"
elf = "0.7.1"
rust-strings = "0.6.0"
heh = "0.6.1"
tui-input = "0.11.1"
tui-popup = "0.5.0"
unicode-width = "0.2.0"
textwrap = "0.16.2"
lurk-cli = { version = "=0.3.10", optional = true }
serde = { version = "=1.0.217" }
serde_derive = { version = "=1.0.217" }
nix = { version = "0.29.0", features = ["ptrace", "signal"] }
ansi-to-tui = "6.0.0"
console = "0.15.11"
which = "8.0.0"
better-panic = "0.3.0"
tui-big-text = "0.6.0"
chrono = "0.4.42"
bytesize = "2.3.0"
sysinfo = { version = "0.37.2", default-features = false, features = ["user"] }
webbrowser = "1.0.6"
lddtree = "0.3.8"
itertools = "0.14.0"
termbg = "0.6.2"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false

