[package]
name = "binsider"
version = "0.3.0"
description = "Analyze ELF binaries like a boss"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://binsider.dev"
repository = "https://github.com/orhun/binsider"
keywords = ["analyze", "binary", "tui", "elf"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.88.0"
include = [
  "src/**/*",
  "Cargo.*",
  "LICENSE*",
  "README.md",
  "CHANGELOG.md",
]

[features]
default = ["dynamic-analysis"]
dynamic-analysis = ["lurk-cli"]

[dependencies]
ratatui = "0.30.0"
clap = { version = "4.5.53", features = ["derive", "env", "wrap_help", "cargo"] }
thiserror = "2.0.17"
elf = "0.8.0"
rust-strings = "0.6.0"
heh = "0.6.3"
tui-input = "0.15.0"
tui-popup = "0.7.2"
unicode-width = "0.2.2"
textwrap = "0.16.2"
lurk-cli = { version = "0.3.11", optional = true }
serde = "1.0.228" 
serde_derive = "1.0.228"
nix = { version = "0.30.1", features = ["ptrace", "signal"] }
ansi-to-tui = "8.0.1"
console = "0.16.2"
which = "8.0.0"
better-panic = "0.3.0"
tui-big-text = "0.8.1"
chrono = "0.4.43"
bytesize = "2.3.0"
sysinfo = { version = "0.37.2", default-features = false, features = ["user"] }
webbrowser = "1.0.6"
lddtree = "0.4.0"
itertools = "0.14.0"
termbg = "0.6.2"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false

